# Arche-webgpu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
apps/: BackendBinding.cpp  CMakeLists.txt  ComboRenderBundleEncoderDescriptor.cpp  ComboRenderBundleEncoderDescriptor.h  ComboRenderPipelineDescriptor.cpp  EmptyDebugLogger.cpp  GLFWUtils.cpp  GLFWUtils.h  GLFWUtils_metal.mm  Irradiance_app.cpp  Irradiance_app.h  MetalBinding.mm  NullBinding.cpp  OSXTimer.cpp  ObjCUtils.mm  SampleUtils.cpp  ScopedAutoreleasePool.h  ScopedAutoreleasePool.mm  TerribleCommandBuffer.cpp  TerribleCommandBuffer.h  TestUtils.cpp  TestUtils.h  TextureUtils.cpp  WGPUHelpers.cpp  WGPUHelpers.h  WireHelper.cpp  WireHelper.h  animation_additive_app.cpp  animation_app.cpp  animation_app.h  animation_attach_app.cpp  animation_attach_app.h  animation_blend_app.cpp  animation_blend_app.h  animation_create_app.cpp  animation_create_app.h  animation_ik_app.cpp  animation_ik_app.h  animation_ik_floor_app.cpp  animation_ik_floor_app.h  (+60 more)
apps/animation/: animation_additive_app.cpp  animation_additive_app.h  animation_attach_app.cpp  animation_blend_app.cpp  animation_create_app.cpp  animation_ik_floor_app.cpp  animation_ik_hand_app.cpp  animation_ik_hand_app.h  animation_ik_lookat_app.cpp  animation_ik_lookat_app.h  animation_partial_blend_app.cpp  animation_partial_blend_app.h  animation_sample.h  skinning_app.cpp  skinning_app.h
apps/example/: BackendBinding.cpp  BackendBinding.h  CMakeLists.txt  ComboRenderBundleEncoderDescriptor.cpp  ComboRenderBundleEncoderDescriptor.h  ComboRenderPipelineDescriptor.cpp  ComboRenderPipelineDescriptor.h  EmptyDebugLogger.cpp  GLFWUtils.cpp  GLFWUtils.h  GLFWUtils_metal.mm  Glfw3Fuchsia.cpp  MetalBinding.mm  NullBinding.cpp  OSXTimer.cpp  ObjCUtils.h  ObjCUtils.mm  PlatformDebugLogger.h  PosixTimer.cpp  SampleUtils.cpp  SampleUtils.h  ScopedAutoreleasePool.mm  SystemUtils.cpp  SystemUtils.h  TerribleCommandBuffer.cpp  TerribleCommandBuffer.h  TestUtils.cpp  TestUtils.h  TextureUtils.cpp  TextureUtils.h  Timer.h  WGPUHelpers.cpp  WGPUHelpers.h  WindowsDebugLogger.cpp  WindowsTimer.cpp  WireHelper.cpp  WireHelper.h  main_example.cpp
apps/physics_samples/: physics_debug_app.cpp  physics_samples.h  physics_utils.cpp  physics_utils.h
apps/physx/: physx_helper.cpp  physx_helper.h  physx_samples.h
apps/physx_app/: kapla_app.cpp  kapla_app.h
apps/plugins/: CMakeLists.txt  plugins.cpp  plugins.cpp.in  plugins.h
apps/rendering/: cascade_shadowmap_app.cpp  cascade_shadowmap_app.h  cluster_forward_app.cpp  cluster_forward_app.h  ibl_app.cpp  irradiance_app.cpp  multi_light_app.cpp  multi_light_app.h  omni_shadowmap_app.cpp  omni_shadowmap_app.h  particle_app.cpp  pbr_app.cpp  rendering_sample.h  shadowmap_app.cpp  skybox_app.cpp  skybox_app.h
apps/toolkit/: grid_app.cpp  grid_app.h  toolkit_sample.h
test.math/: CMakeLists.txt  bounding_box2_tests.cpp  bounding_box3_tests.cpp  bounding_box_tests.cpp  bounding_frustum_tests.cpp  collision_util_tests.cpp  color_tests.cpp  gtest_math_helper.h  math_archive_tests.cpp  math_utils_tests.cpp  matrix2x2_tests.cpp  matrix3x3_tests.cpp  matrix4x4_tests.cpp  matrix_tests.cpp  point2_tests.cpp  point3_tests.cpp  point_tests.cpp  quaternion_tests.cpp  ray2_tests.cpp  ray3_tests.cpp  rect_tests.cpp  scalable_transform_tests.cpp  transform2_tests.cpp  transform3_tests.cpp  unit_tests_utils.cpp  unit_tests_utils.h  vector2_tests.cpp  vector3_tests.cpp  vector4_tests.cpp  vector_tests.cpp
vox.base/: CMakeLists.txt  constants.h  cpp_utils-inl.h  cpp_utils.h  endianness.h  file_system.h  logging.h  macros.h  parallel-inl.h  parallel.cpp  parallel.h  private_helpers.h  serial-inl.h  serial.h  span.h  string_utils.cpp  string_utils.h  timer.cpp  timer.h  type_helpers.h
vox.base/containers/: array.h  array_archive.h  deque.h  intrusive_list.h  list.h  map.h  queue.h  set.h  stack.h  std_allocator.h  string.h  string_archive.cpp  string_archive.h  unordered_map.h  unordered_set.h  vector.h  vector_archive.h
vox.base/io/: archive.cpp  archive.h  archive_traits.h  stream.cpp  stream.h
vox.base/memory/: allocator.cpp  allocator.h  unique_ptr.h
vox.base/reflect/: enum_parameter.h  function_parameter.h  numeric_parameter.h  parameter.h  parameter_object.h  vector_parameter.h
vox.navigation/: CMakeLists.txt  chunky_tri_mesh.cpp  chunky_tri_mesh.h  convex_volume_tool.cpp  convex_volume_tool.h  file_list.cpp  file_list.h  input_geom.cpp  input_geom.h  mesh_loader_obj.cpp  nav_context.cpp  nav_context.h  nav_debug_render.cpp  nav_debug_render.h  nav_file.cpp  nav_file.h  perf_timer.cpp  perf_timer.h  sample.cpp  sample.h  test_case.cpp  test_case.h
vox.render/: CMakeLists.txt  animator.cpp  animator.h  animator_controller.cpp  animator_controller.h  application.cpp  application.h  assimp_parser.cpp  assimp_parser.h  background.h  behaviour-inl.h  behaviour.cpp  behaviour.h  camera.cpp  camera.h  component.cpp  component.h  components_manager.cpp  components_manager.h  debug_info.cpp  debug_info.h  editor_application.cpp  editor_application.h  engine.cpp  engine.h  entity.cpp  entity.h  event-inl.h  event.h  filesystem.cpp  filesystem.h  forward_application.cpp  forward_application.h  glfw_window.cpp  glfw_window.h  graphics_application.cpp  graphics_application.h  gui.cpp  gui.h  helper.cpp  (+55 more)
vox.render/animation/: animation_state.cpp  animation_state.h  animator.cpp  animator.h  animator_blending.cpp  animator_blending.h  animator_clip.cpp  animator_clip.h  animator_controller.cpp  animator_controller.h  animator_state.cpp  animator_state.h  avatar.h  skin.cpp  skin.h  skin_mesh_renderer.cpp  skin_mesh_renderer.h  skinned_mesh_renderer.cpp  skinned_mesh_renderer.h
vox.render/controls/: free_control.cpp  free_control.h  orbit_control.cpp  orbit_control.h  spherical.cpp  spherical.h
vox.render/fog/: exp2_fog.cpp  exp2_fog.h  fog.cpp  fog.h  linear_fog.cpp  linear_fog.h
vox.render/graphics/: buffer.cpp  buffer.h  index_buffer_binding.cpp  index_buffer_binding.h  mesh.cpp  mesh.h  sub_mesh.cpp  sub_mesh.h
(+1954 files in other folders)
